--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -4,3 +4,4 @@ dependencies:
   espressif/esp_lvgl_port: "^2.6.1"
   espressif/esp_lcd_touch: "^1.1.2"
   espressif/esp_lcd_touch_gt911: "^1.1.3"
+  espressif/esp_tinyusb: "^1.4.0"
